Changes in version 0.99.0 (Release date: in development)
--------------------------
+ Submitted to Bioconductor


Changes in version 1.1.2 (2019-03-08)
--------------------------

BUG CORRECTION

+ Debugged Bucketing and InternalReferencing for n = 1


Changes in version 1.1.3 (2019-03-11)
--------------------------

NEW FEATURES

+ Added the ZeroFilling function 
+ Made the printed text for each pre-processing function optional


Changes in version 1.3.1 (2019-05-17)
--------------------------

BUG CORRECTION 

+ Prevented future bug with ggplot2::annotate()

IMPROVEMENT

+ Improved PCA loadings graphs



Changes in version 1.3.2 (2019-08-05)
--------------------------

BUG CORRECTION 

+ Debugged InternalReferencing for plotting Peak search zone and location of only 1 spectrum

IMPROVEMENT

+ Improved the Vignette


Changes in version 1.7.1 (2020-07-21)
--------------------------

BUG CORRECTION 

+ Debugged ReadFid when the type of raw data is double (i.e. if DTYPA==2)


Changes in version 1.9.1 (2021-01-14)
--------------------------

BUG CORRECTION 

+ Debugged Normalization with type.norm = "firstquartile"