@@ -1,11 +1,0 @@
-language: r
-r: bioc-devel
-sudo: true
-cache: packages
-os:
-  - linux
-
-warnings_are_errors: false 
-bioc_required: true
-bioc_use_devel: true
-
